# Carnelia

./: CNAME  Cargo.toml  README.md
.github/instructions/: action_plan.instructions.md  analysis_report.instructions.md  architecture.instructions.md  common-questions.instructions.md
.github/prompts/: plan-mdcsPhasesCompletion.prompt.md  plan-wasmBindingsAndReactApp.prompt.md
.github/workflows/: docs.yml
apps/carnelia-docs-sharing/: .env.example  index.html  package.json  vite.config.ts
apps/carnelia-docs-sharing/src/: App.tsx  index.css
apps/carnelia-docs-sharing/src/components/: Editor.tsx  RemoteCursors.tsx  SyncStatus.tsx  Toolbar.tsx
apps/carnelia-docs-sharing/src/hooks/: index.ts  useCollaborativeDocument.ts  useSync.ts
apps/carnelia-docs-sharing/src/lib/: carnelia-client.ts
apps/carnelia-increment/: Cargo.toml
apps/carnelia-increment/src/: main.rs
apps/carnelia-sync-server/: Dockerfile  README.md  package.json
apps/carnelia-sync-server/src/: index.ts
content/: AUDIO_TRANSCRIPT.md  package.json  pnpm-lock.yaml  remotion.config.ts  render.mjs
content/src/: Root.tsx
content/src/CrdtExplainer/: CrdtExplainer.tsx  fonts.ts  index.ts
content/src/CrdtExplainer/scenes/: BirdWatchScene.tsx  CarneliaSolutionScene.tsx  CarneliaSyncScene.tsx  CollabDemoScene.tsx  CrdtBreakthroughScene.tsx  DeltaScene.tsx  DotStoreScene.tsx  EndScene.tsx  GCounterScene.tsx  IncrementDemoScene.tsx  IntroScene.tsx  LimitationsScene.tsx  MergeScene.tsx  MerkleScene.tsx  PresentedByScene.tsx  RealWorldCrdtScene.tsx  ReplicaScene.tsx  SemilatticeScene.tsx
crates/mdcs-compaction/: Cargo.toml  README.md
crates/mdcs-compaction/src/: compactor.rs  lib.rs  pruning.rs  snapshot.rs  stability.rs  version_vector.rs
crates/mdcs-compaction/tests/: integration.rs
crates/mdcs-core/: ADVANCED_EXAMPLES.md  Cargo.toml  STRESS_TEST_GUIDE.md
crates/mdcs-core/src/: gset.rs  lattice.rs  lib.rs  lwwreg.rs  map.rs  mvreg.rs  orset.rs  pncounter.rs
crates/mdcs-core/tests/: properties.proptest-regressions  properties.rs
crates/mdcs-db/: Cargo.toml
crates/mdcs-db/src/: document.rs  error.rs  json_crdt.rs  lib.rs  presence.rs  rga_list.rs  rga_text.rs  rich_text.rs  undo.rs
crates/mdcs-delta/: Cargo.toml  README.md
crates/mdcs-delta/src/: anti_entropy.rs  buffer.rs  causal.rs  lib.rs  main.rs  mutators.rs
crates/mdcs-delta/tests/: causal_consistency.rs  convergence.rs
crates/mdcs-merkle/: Cargo.toml
crates/mdcs-merkle/src/: broadcaster.rs  hash.rs  lib.rs  node.rs  store.rs  syncer.rs
crates/mdcs-merkle/tests/: integration.rs
crates/mdcs-sdk/: Cargo.toml  README.md
crates/mdcs-sdk/src/: client.rs  document.rs  error.rs  lib.rs  network.rs  presence.rs  session.rs  sync.rs
crates/mdcs-wasm/: Cargo.toml  README.md
crates/mdcs-wasm/src/: lib.rs
crates/mdcs-wasm/tests/: wasm.rs
examples/mdcs-core/: sample-implementations.rs
examples/mdcs-delta/: causal_example.rs  delta_buffer_example.rs
examples/mdcs-sdk/: collaborative_text.rs  json_collab.rs  network_simulation.rs  offline_sync.rs  presence_demo.rs  rich_text_collab.rs
logs/: stresstest_1_1_2026.txt  stresstest_3_2_2026.txt  stresstest_3_2_2026_full.txt
src/: main.rs  stress_test.rs
