[package]
name = "carnelia"
version = "0.1.0"
edition = "2021"
description = "Merkle-Delta CRDT Store - A lock-free, offline-first CRDT database"

[workspace]
members = [
    "crates/mdcs-core",      # Core CRDT types and traits
#    "crates/mdcs-delta",     # Delta-state machinery
#    "crates/mdcs-merkle",    # Merkle-Clock and DAG
#    "crates/mdcs-sync",      # Anti-entropy protocols
#    "crates/mdcs-compact",   # Compaction/GC subsystem
#    "crates/mdcs-db",        # Database API layer
#    "crates/mdcs-sim",       # Network simulation for testing
]

[dependencies]
mdcs-core = { path = "crates/mdcs-core" }
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
chrono = "0.4"
async-stream = "0.3"
futures = "0.3"
