[package]
name = "carnelia"
version = "0.1.0"
edition = "2021"
description = "Merkle-Delta CRDT Store - A lock-free, offline-first CRDT database"

[workspace]
members = [
    "crates/mdcs-core",       # Core CRDT types and traits
    "crates/mdcs-delta",      # Delta-state machinery
    "crates/mdcs-merkle",     # Merkle-Clock and DAG
    "crates/mdcs-compaction", # Compaction/GC subsystem
#    "crates/mdcs-sync",      # Anti-entropy protocols
#    "crates/mdcs-db",        # Database API layer
#    "crates/mdcs-sim",       # Network simulation for testing
]

[dependencies]
mdcs-core = { path = "crates/mdcs-core" }
mdcs-delta = { path = "crates/mdcs-delta" }
mdcs-merkle = { path = "crates/mdcs-merkle" }
mdcs-compaction = { path = "crates/mdcs-compaction" }
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
chrono = "0.4"
async-stream = "0.3"
futures = "0.3"

[[example]]
name = "delta_buffer_example"
path = "examples/mdcs-delta/delta_buffer_example.rs"

[[example]]
name = "causal_example"
path = "examples/mdcs-delta/causal_example.rs"

