[package]
name = "carnelia"
version = "1.0.0"
authors = ["Suvan Gowri Shanker <suvan.gowrishanker.204@gmail.com>", "Avinash Chidambaram <avinash.a2k4@gmail.com>"]
edition = "2021"
description = "Merkle-Delta CRDT Store - A lock-free, offline-first CRDT database"
readme = "README.md"
homepage = "https://suvangs.tech"
repository = "https://github.com/Agate-DB/Carnelia"
license = "GPL-3.0"
keywords = ["CRDT", "Merkle-Clock", "DAG", "collaborative", "database"]
categories = ["database-implementations", "data-structures"]
exclude = ["target", "examples", "benches", "tests", "docs", "scripts", "logs", "apps"]


[workspace]
members = [
    "crates/mdcs-core",       # Core CRDT types and traits
    "crates/mdcs-delta",      # Delta-state machinery
    "crates/mdcs-merkle",     # Merkle-Clock and DAG
    "crates/mdcs-compaction", # Compaction/GC subsystem
    "crates/mdcs-db",         # Database API layer (Phase 6)
    "crates/mdcs-sdk",        # High-level SDK for collaborative apps
    "crates/mdcs-wasm",       # WebAssembly bindings for browser use
]

[dependencies]
mdcs-core = { path = "crates/mdcs-core", version = "0.1.1" }
mdcs-delta = { path = "crates/mdcs-delta", version = "0.1.1" }
mdcs-merkle = { path = "crates/mdcs-merkle", version = "0.1.1" }
mdcs-compaction = { path = "crates/mdcs-compaction", version = "0.1.1" }
mdcs-db = { path = "crates/mdcs-db", version = "0.1.1" }
mdcs-sdk = { path = "crates/mdcs-sdk", version = "0.1.1" }
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
chrono = "0.4"
async-stream = "0.3"
futures = "0.3"

[[example]]
name = "delta_buffer_example"
path = "examples/mdcs-delta/delta_buffer_example.rs"

[[example]]
name = "causal_example"
path = "examples/mdcs-delta/causal_example.rs"

# MDCS SDK Examples
[[example]]
name = "collaborative_text"
path = "examples/mdcs-sdk/collaborative_text.rs"

[[example]]
name = "rich_text_collab"
path = "examples/mdcs-sdk/rich_text_collab.rs"

[[example]]
name = "json_collab"
path = "examples/mdcs-sdk/json_collab.rs"

[[example]]
name = "presence_demo"
path = "examples/mdcs-sdk/presence_demo.rs"

[[example]]
name = "network_simulation"
path = "examples/mdcs-sdk/network_simulation.rs"

[[example]]
name = "offline_sync"
path = "examples/mdcs-sdk/offline_sync.rs"

# Profile settings for WASM builds (affects mdcs-wasm crate)
[profile.release]
opt-level = "s"
lto = true
