[package]
name = "carnelia-increment"
version = "0.1.0"
edition = "2021"
description = "Standalone CLI increment tracker using the MDCS SDK with CRDT sync and merge"

[dependencies]
mdcs-sdk = { path = "../../crates/mdcs-sdk" }
tokio = { version = "1.35", features = ["rt", "macros"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde_json = "1.0"

[workspace]