[package]
name = "mdcs-compaction"
version = "0.1.0"
edition = "2021"
description = "Compaction and stability subsystem for MDCS"
license = "MIT OR Apache-2.0"

[dependencies]
mdcs-core = { path = "../mdcs-core" }
mdcs-merkle = { path = "../mdcs-merkle" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
