# File: `crates/mdcs-core/Cargo.toml`
[package]
name = "mdcs-core"
version = "0.1.1"
authors = ["Suvan Gowri Shanker <suvan.gowrishanker.204@gmail.com>", "Avinash Chidambaram <avinash.a2k4@gmail.com>"]
edition = "2021"
description = "Core CRDT types and traits for the Carnelia Merkle-Delta CRDT Store"
license = "GPL-3.0"
repository = "https://github.com/Agate-DB/Carnelia"
homepage = "https://suvangs.tech"
keywords = ["CRDT", "semilattice", "data-structures", "distributed", "convergence"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ulid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
proptest = "1.0"
serde_json = "1.0"