[package]
name = "mdcs-merkle"
version = "0.1.0"
edition = "2021"
description = "Merkle-Clock DAG for causal history tracking in MDCS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
mdcs-core = { path = "../mdcs-core", version = "0.1.0" }
mdcs-delta = { path = "../mdcs-delta", version = "0.1.0" }

[dev-dependencies]
proptest = "1.0"
rand = "0.8"
