[package]
name = "mdcs-sdk"
version = "0.1.0"
authors = ["Suvan Gowri Shanker <suvan.gowrishanker.204@gmail.com>", "Avinash Chidambaram <avinash.a2k4@gmail.com>"]
edition = "2021"
description = "High-level SDK for building collaborative applications with the Carnelia MDCS"
license = "GPL-3.0"
repository = "https://github.com/Agate-DB/Carnelia"
homepage = "https://suvangs.tech"
keywords = ["CRDT", "collaborative", "SDK", "real-time", "offline-first"]
categories = ["database-implementations", "data-structures"]

[dependencies]
# Core MDCS crates
mdcs-core = { path = "../mdcs-core", version = "0.1.0" }
mdcs-delta = { path = "../mdcs-delta", version = "0.1.0" }
mdcs-merkle = { path = "../mdcs-merkle", version = "0.1.0" }
mdcs-compaction = { path = "../mdcs-compaction", version = "0.1.0" }
mdcs-db = { path = "../mdcs-db", version = "0.1.0" }

# Async runtime
tokio = { version = "1.35", features = ["full", "sync"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
ulid = "1.1"
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
