[package]
name = "mdcs-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for MDCS - Merkle-Delta CRDT Store"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
# MDCS crates
mdcs-db = { path = "../mdcs-db", version = "0.1.0" }
mdcs-core = { path = "../mdcs-core", version = "0.1.0" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Random number generation in WASM
getrandom = { version = "0.3", features = ["wasm_js"] }

# Better panic messages in browser console
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Note: Profile settings must be in workspace root Cargo.toml
# [profile.release]
# opt-level = "s"
# lto = true
